ci-cd/spinnaker-halyard/spinnaker-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spinnaker-ingress
  namespace: spinnaker
spec:
  rules:
  - host: spingate.<YOUR_ORG>.com
    http:
      paths:
      - backend:
          serviceName: spin-gate
          servicePort: 8084
  - host: spinnaker.<YOUR_ORG>.com
    http:
      paths:
      - backend:
          serviceName: spin-deck
          servicePort: 9000
